# rules_jekyll

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE  WORKSPACE.bazel  deps.bzl  jekyll.bzl
jekyll/: defs.bzl  deps.bzl  jekyll.bzl  repositories.bzl
jekyll/private/: jekyll_repositories.bzl  repositories.bzl
